--- a/src/proyectodosprogramacion/FXMLDocument.fxml
+++ b/src/proyectodosprogramacion/FXMLDocument.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodosprogramacion.FXMLDocumentController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="444.0" prefWidth="630.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="proyectodosprogramacion.FXMLDocumentController">
+   <children>
+      <ScrollPane layoutX="14.0" layoutY="22.0" prefHeight="363.0" prefWidth="200.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="407.0" prefWidth="198.0" />
+        </content>
+      </ScrollPane>
+      <TableView layoutX="252.0" layoutY="29.0" prefHeight="296.0" prefWidth="344.0" />
+      <Label layoutX="252.0" layoutY="354.0" text="ingrese el numero de columnas que desea " />
+      <TextField layoutX="506.0" layoutY="350.0" prefHeight="25.0" prefWidth="89.0" />
+      <Button layoutX="514.0" layoutY="392.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="Button" />
+   </children>
 </AnchorPane>
