--- a/src/proyectodosprogramacion/FXMLDocument.fxml
+++ b/src/proyectodosprogramacion/FXMLDocument.fxml
@@ -3,20 +3,39 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="444.0" prefWidth="630.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="proyectodosprogramacion.FXMLDocumentController">
+<AnchorPane id="AnchorPane" fx:id="pane" prefHeight="444.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodosprogramacion.FXMLDocumentController">
    <children>
-      <ScrollPane layoutX="14.0" layoutY="22.0" prefHeight="363.0" prefWidth="200.0">
+      <ScrollPane fx:id="scrollPane" layoutX="14.0" layoutY="23.0" prefHeight="350.0" prefWidth="200.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="407.0" prefWidth="198.0" />
+          <AnchorPane fx:id="pane2" minHeight="0.0" minWidth="0.0" prefHeight="406.0" prefWidth="198.0" />
         </content>
       </ScrollPane>
-      <TableView layoutX="252.0" layoutY="29.0" prefHeight="296.0" prefWidth="344.0" />
-      <Label layoutX="252.0" layoutY="354.0" text="ingrese el numero de columnas que desea " />
-      <TextField layoutX="506.0" layoutY="350.0" prefHeight="25.0" prefWidth="89.0" />
-      <Button layoutX="514.0" layoutY="392.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="Button" />
+      <Label fx:id="labelIngreseColumnas" layoutX="249.0" layoutY="351.0" text="ingrese el numero de columnas que desea " />
+      <TextField fx:id="tfNumeroFilas" layoutX="504.0" layoutY="308.0" prefHeight="25.0" prefWidth="95.0" />
+      <Button fx:id="bAccion" layoutX="543.0" layoutY="405.0" mnemonicParsing="false" onAction="#accionBoton" prefHeight="25.0" prefWidth="73.0" text="generar " />
+      <Label fx:id="labelIngreseFilas" layoutX="249.0" layoutY="312.0" text="Ingrese el numero de filas que desea" />
+      <TextField fx:id="tfNumeroColumnas" layoutX="504.0" layoutY="347.0" prefHeight="25.0" prefWidth="95.0" />
+      <ScrollPane layoutX="227.0" layoutY="14.0" prefHeight="274.0" prefWidth="380.0">
+         <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="461.0" prefWidth="476.0">
+               <children>
+                  <GridPane fx:id="gridPane" accessibleRole="IMAGE_VIEW" cache="true" prefHeight="430.0" prefWidth="475.0">
+                    <rowConstraints>
+                        <RowConstraints maxHeight="156.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <columnConstraints>
+                        <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
