--- a/src/proyectodosprogramacion/FXMLDocument.fxml
+++ b/src/proyectodosprogramacion/FXMLDocument.fxml
@@ -13,7 +13,7 @@
    <children>
       <ScrollPane fx:id="scrollPane" layoutX="14.0" layoutY="23.0" prefHeight="350.0" prefWidth="200.0">
         <content>
-          <AnchorPane fx:id="pane2" minHeight="0.0" minWidth="0.0" prefHeight="406.0" prefWidth="198.0" />
+          <AnchorPane fx:id="listaImagenes" minHeight="0.0" minWidth="0.0" prefHeight="406.0" prefWidth="198.0" />
         </content>
       </ScrollPane>
       <Label fx:id="labelIngreseColumnas" layoutX="249.0" layoutY="351.0" text="ingrese el numero de columnas que desea " />
