--- a/src/proyectodosprogramacion/FXMLDocument.fxml
+++ b/src/proyectodosprogramacion/FXMLDocument.fxml
@@ -5,14 +5,25 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane id="AnchorPane" fx:id="pane" prefHeight="444.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodosprogramacion.FXMLDocumentController">
    <children>
-      <ScrollPane fx:id="scrollPane" layoutX="14.0" layoutY="23.0" prefHeight="350.0" prefWidth="200.0">
-        <content>
-          <AnchorPane fx:id="pane2" minHeight="0.0" minWidth="0.0" prefHeight="406.0" prefWidth="198.0" />
-        </content>
+      <ScrollPane fx:id="scrollPane" layoutX="14.0" layoutY="3.0" prefHeight="425.0" prefWidth="146.0">
+         <content>
+            <GridPane fx:id="gpn_list" gridLinesVisible="true" prefHeight="330.0" prefWidth="98.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="155.0" minHeight="10.0" prefHeight="88.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="109.0" minHeight="0.0" prefHeight="86.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </content>
       </ScrollPane>
       <Label fx:id="labelIngreseColumnas" layoutX="249.0" layoutY="351.0" text="ingrese el numero de columnas que desea " />
       <TextField fx:id="tfNumeroFilas" layoutX="504.0" layoutY="308.0" prefHeight="25.0" prefWidth="95.0" />
