--- a/src/proyectodosprogramacion/FXMLDocument.fxml
+++ b/src/proyectodosprogramacion/FXMLDocument.fxml
@@ -7,9 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" fx:id="pane" prefHeight="444.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodosprogramacion.FXMLDocumentController">
+<AnchorPane id="AnchorPane" fx:id="pane" prefHeight="478.0" prefWidth="659.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodosprogramacion.FXMLDocumentController">
    <children>
       <ScrollPane fx:id="scrollPane" layoutX="14.0" layoutY="3.0" prefHeight="425.0" prefWidth="146.0">
          <content>
@@ -17,29 +16,20 @@
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="155.0" minHeight="10.0" prefHeight="88.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="109.0" minHeight="0.0" prefHeight="86.0" vgrow="SOMETIMES" />
-              </rowConstraints>
             </GridPane>
          </content>
       </ScrollPane>
-      <Label fx:id="labelIngreseColumnas" layoutX="249.0" layoutY="351.0" text="ingrese el numero de columnas que desea " />
-      <TextField fx:id="tfNumeroFilas" layoutX="504.0" layoutY="308.0" prefHeight="25.0" prefWidth="95.0" />
-      <Button fx:id="bAccion" layoutX="543.0" layoutY="405.0" mnemonicParsing="false" onAction="#accionBoton" prefHeight="25.0" prefWidth="73.0" text="generar " />
-      <Label fx:id="labelIngreseFilas" layoutX="249.0" layoutY="312.0" text="Ingrese el numero de filas que desea" />
-      <TextField fx:id="tfNumeroColumnas" layoutX="504.0" layoutY="347.0" prefHeight="25.0" prefWidth="95.0" />
-      <ScrollPane layoutX="227.0" layoutY="14.0" prefHeight="274.0" prefWidth="380.0">
-         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="570.0" prefWidth="651.0">
-               <children>
-                  <GridPane fx:id="gridPane" accessibleRole="IMAGE_VIEW" cache="true" layoutX="1.0" prefHeight="430.0" prefWidth="585.0">
-                     
-                  </GridPane>
-               </children>
-            </AnchorPane>
-         </content>
-      </ScrollPane>
+      <Label fx:id="labelIngreseColumnas" layoutX="243.0" layoutY="398.0" text="ingrese el numero de columnas que desea " />
+      <TextField fx:id="tfNumeroFilas" layoutX="520.0" layoutY="347.0" prefHeight="25.0" prefWidth="95.0" />
+      <Button fx:id="limpiar" layoutX="477.0" layoutY="439.0" mnemonicParsing="false" onAction="#accionLimpiar" text="Limpiar" />
+      <Button fx:id="bAccion" layoutX="542.0" layoutY="439.0" mnemonicParsing="false" onAction="#accionBoton" prefHeight="25.0" prefWidth="73.0" text="generar " />
+      <Label fx:id="labelIngreseFilas" layoutX="243.0" layoutY="360.0" text="Ingrese el numero de filas que desea" />
+      <TextField fx:id="tfNumeroColumnas" layoutX="520.0" layoutY="394.0" prefHeight="25.0" prefWidth="95.0" />
+      <ScrollPane fx:id="paneMatriz" layoutX="235.0" layoutY="59.0" prefHeight="274.0" prefWidth="380.0" />
+      <Button layoutX="235.0" layoutY="439.0" mnemonicParsing="false" onAction="#accionSave" text="Guardar" />
+      <Button layoutX="308.0" layoutY="439.0" mnemonicParsing="false" onAction="#accionOpen" text="Abrir" />
+      <Button layoutX="160.0" layoutY="439.0" mnemonicParsing="false" onAction="#accionEnlarge" text="Agrandar" />
+      <Button layoutX="357.0" layoutY="439.0" mnemonicParsing="false" onAction="#exportImagepng" text="Png" />
+      <Button layoutX="421.0" layoutY="439.0" mnemonicParsing="false" onAction="#exportImagejpg" text="Jpg" />
    </children>
 </AnchorPane>
