--- a/src/proyectodosprogramacion/FXMLDocument.fxml
+++ b/src/proyectodosprogramacion/FXMLDocument.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane id="AnchorPane" fx:id="pane" prefHeight="478.0" prefWidth="659.0" style="-fx-background-color: 33BBFF;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodosprogramacion.FXMLDocumentController">
+<AnchorPane id="AnchorPane" fx:id="pane" prefHeight="478.0" prefWidth="659.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectodosprogramacion.FXMLDocumentController">
    <children>
       <ScrollPane fx:id="scrollPane" layoutX="14.0" layoutY="3.0" prefHeight="425.0" prefWidth="146.0">
          <content>
